# ULCnet

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: download_voicebank.py
logs/: training_loss_epoch20_recovered.csv
src/: evaluate.py  inference.py  train.py
src/dsp/: __init__.py  compression.py  stft.py
src/features/: feature_extraction.py
src/models/: __init__.py  cnn.py  crn.py
src/utils/: __init__.py  audio.py  metrics.py
